cabal-version: 3.0
name:          vga-colorbars
version:       0.1.0.0
build-type:    Simple

common clash-options
  default-language:   Haskell2010
  default-extensions: DataKinds BinaryLiterals NoImplicitPrelude NoStarIsType
  ghc-options:        -Wall -fexpose-all-unfoldings -fno-worker-wrapper

library
  import:           clash-options
  exposed-modules:  VgaTiming
                  , Top
  hs-source-dirs:   src
  build-depends:    base >= 4.13
                  , clash-prelude >= 1.8

executable clash
  main-is:          Main.hs
  hs-source-dirs:   bin
  build-depends:    base
                  , clash-ghc
  default-language: Haskell2010
